panoiq_stackstorm/airflow/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /\$1
spec:
  rules:
    - host: "HOST"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: air-webserver
                port: 
                  number: 31837
  ingressClassName: nginx
